--- a/auto_route_generator/pubspec.yaml
+++ b/auto_route_generator/pubspec.yaml
@@ -15,8 +15,10 @@ dependencies:
   build_runner: ^1.10.1
   code_builder: ^3.6.0
   dart_style: ^1.3.9
-  auto_route: ^1.0.0-beta.10
-#    path: ../auto_route
+  auto_route:
+    git:
+      url: https://github.com/doppio/auto_route_library
+      path: auto_route
 
 dev_dependencies:
   source_gen_test:
